--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Receta de Humita</title>
+    <link rel="stylesheet" href="./css/estilos.css">
   </head>
   <body>
     <h1>Receta de humita en chala</h1>
@@ -11,7 +12,7 @@
     <p>Hoy vas a aprender a hacer una receta típica del norte del país y riquísima!</p>
     <p>Y lo mejor es que va a ser mucho mas facil de hacer de lo que pensas!</p>
     <br>
-    <h3>Ingredientes que necesitamos:</h3>
+    <h3 class="ing">Ingredientes que necesitamos:</h3>
     <ul>
       <li>6 choclos</li>
       <li>2 cucharadas de manteca o grasa</li>
@@ -22,7 +23,7 @@
       <li>Una pizca de azúcar</li>
     </ul>
     <br>
-    <h3>Preparación:</h3>
+    <h3 class="prep">Preparación:</h3>
     <ol>
       <li>Pelar los choclos y guardar sus hojas (las chalas)</li>
       <li>Rallar los granos de choclo</li>
@@ -36,7 +37,10 @@
     <img src="./img/humita.jpg" alt="">
     <p>Un video por si necesitas ver a alguien cocinando la receta para saber bien algún paso</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/co9MDJEyVEs?si=VEdEfFgHUEF8w7A9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <h3>La región de la cual es originaria la receta</h3>
+    <br>
+    <p>Y la receta en otra página.</p>
+    <a href="https://www.lapaulina.com.ar/es/recetas/humanita-en-chala" target="_blank">Receta de Humita en Chala</a>
+    <h3 class="reg">La región de la cual es originaria la receta</h3>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3606197.5619397564!2d-66.09150418892305!3d-28.034337060638116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9425a84f49ae19cf%3A0xe23b1c64d3a49ba5!2sSantiago%20del%20Estero!5e0!3m2!1ses-419!2sar!4v1760487654938!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1819691.1806793902!2d-66.64962114213336!3d-27.02750083573654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x942245e9a8094c59%3A0xe9c2852a1c5d0cfd!2zVHVjdW3DoW4!5e0!3m2!1ses-419!2sar!4v1760487402719!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3727119.4588337303!2d-68.09719461822625!3d-24.179969682287474!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x941b0d2938ead0c7%3A0x8b4a1bd1f6c37998!2sSalta!5e0!3m2!1ses-419!2sar!4v1760487441767!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
