--- a/index.html
+++ b/index.html
@@ -1,49 +1,124 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Receta de Humita</title>
-    <link rel="stylesheet" href="./css/estilos.css">
-  </head>
-  <body>
-    <h1>Receta de humita en chala</h1>
-    <h2>Una comida típica del noroeste del país</h2>
-    <br>
-    <p>Hoy vas a aprender a hacer una receta típica del norte del país y riquísima!</p>
-    <p>Y lo mejor es que va a ser mucho mas facil de hacer de lo que pensas!</p>
-    <br>
-    <h3 class="ing">Ingredientes que necesitamos:</h3>
-    <ul>
-      <li>6 choclos</li>
-      <li>2 cucharadas de manteca o grasa</li>
-      <li>1 cebolla picada</li>
-      <li>100g de queso</li>
-      <li>Sal</li>
-      <li>Pimienta</li>
-      <li>Una pizca de azúcar</li>
-    </ul>
-    <br>
-    <h3 class="prep">Preparación:</h3>
-    <ol>
-      <li>Pelar los choclos y guardar sus hojas (las chalas)</li>
-      <li>Rallar los granos de choclo</li>
-      <li>En una olla, reahogar la cebolla con manteca</li>
-      <li>Agregar el choclo, sal, pimienta y una pizca de azúcar a la olla</li>
-      <li>Cocinar unos minutos hasta que se espese</li>
-      <li>Sacar del fuego y agregar el queso en cubitos</li>
-      <li>Armar los paquetitos con las chalas y atarlos</li>
-      <li>Hervirlos en agua o cocinarlos al vapor unos 20 o 25 minutos</li>
-    </ol>
-    <img src="./img/humita.jpg" alt="">
-    <p>Un video por si necesitas ver a alguien cocinando la receta para saber bien algún paso</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/co9MDJEyVEs?si=VEdEfFgHUEF8w7A9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <br>
-    <p>Y la receta en otra página.</p>
-    <a href="https://www.lapaulina.com.ar/es/recetas/humanita-en-chala" target="_blank">Receta de Humita en Chala</a>
-    <h3 class="reg">La región de la cual es originaria la receta</h3>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3606197.5619397564!2d-66.09150418892305!3d-28.034337060638116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9425a84f49ae19cf%3A0xe23b1c64d3a49ba5!2sSantiago%20del%20Estero!5e0!3m2!1ses-419!2sar!4v1760487654938!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1819691.1806793902!2d-66.64962114213336!3d-27.02750083573654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x942245e9a8094c59%3A0xe9c2852a1c5d0cfd!2zVHVjdW3DoW4!5e0!3m2!1ses-419!2sar!4v1760487402719!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3727119.4588337303!2d-68.09719461822625!3d-24.179969682287474!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x941b0d2938ead0c7%3A0x8b4a1bd1f6c37998!2sSalta!5e0!3m2!1ses-419!2sar!4v1760487441767!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1877749.7527957128!2d-67.00158641317479!3d-23.189172046358813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9404a1f6e75c0087%3A0x815e91b230ce4e79!2sJujuy!5e0!3m2!1ses-419!2sar!4v1760487489614!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-  </body>
+<html lang="es">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <link rel="stylesheet" href="./css/estilos.css">
+    <title>Receta Humita en Chala</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0; padding: 0;
+        }
+        header, footer {
+            background-color: #f2f2f2;
+            padding: 1em;
+            text-align: center;
+        }
+        nav a {
+            margin: 0 1em;
+            text-decoration: none;
+            color: #333;
+        }
+        main {
+            padding: 1em;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        aside {
+            background: #eee;
+            padding: 1em;
+            margin-top: 20px;
+        }
+        footer img.social-icon {
+            width: 24px;
+            margin: 0 5px;
+            vertical-align: middle;
+        }
+        .whatsapp-float {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #25D366;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+            z-index: 100;
+        }
+        .whatsapp-float a {
+            color: white;
+            font-size: 24px;
+            text-decoration: none;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Receta de Humita en Chala</h1>
+    </header>
+    <nav>
+        <a href="https://elgourmet.com/recetas/humita-my-style/" target="_blank" rel="noopener">Humita Tradicional</a>
+        <a href="https://www.paulinacocina.net/humita-en-olla/26534#google_vignette" target="_blank" rel="noopener">Humita en Olla</a>
+        <a href="https://cookpad.com/ar/recetas/7868060" target="_blank" rel="noopener">Humita Saludable</a>
+        <a href="https://www.saltasoy.com.ar/buenas-noticias/toma-nota-como-preparar-las-mejores-humitas-en-chala-8525/" target="_blank" rel="noopener">Humita con Manteca</a>
+    </nav>
+    <main>
+        <section>
+            <h2>Ingredientes</h2>
+            <ul>
+                <li>6 choclos frescos desgranados</li>
+                <li>1 cebolla picada</li>
+                <li>100 g de manteca</li>
+                <li>1/2 taza de leche</li>
+                <li>Sal y pimienta a gusto</li>
+                <li>Choclo para la chala (hojas externas)</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Preparación</h2>
+            <ol>
+              <li>Pelar los choclos y guardar sus hojas (las chalas)</li>
+              <li>Rallar los granos de choclo</li>
+              <li>En una olla, reahogar la cebolla con manteca</li>
+              <li>Agregar el choclo, sal, pimienta y una pizca de azúcar a la olla</li>
+              <li>Cocinar unos minutos hasta que se espese</li>
+              <li>Sacar del fuego y agregar el queso en cubitos</li>
+              <li>Armar los paquetitos con las chalas y atarlos</li>
+              <li>Hervirlos en agua o cocinarlos al vapor unos 20 o 25 minutos</li>
+            </ol>
+        </section>
+        <section>
+          <img src="./img/humita.jpg" alt="">
+        </section>
+        <aside>
+            <h3>Video Tutorial</h3>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/co9MDJEyVEs?si=mZY9M8KYorAFsdZY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </aside>
+        <aside>
+          <h3 class="reg">La región de la cual es originaria la receta</h3>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3606197.5619397564!2d-66.09150418892305!3d-28.034337060638116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9425a84f49ae19cf%3A0xe23b1c64d3a49ba5!2sSantiago%20del%20Estero!5e0!3m2!1ses-419!2sar!4v1760487654938!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1819691.1806793902!2d-66.64962114213336!3d-27.02750083573654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x942245e9a8094c59%3A0xe9c2852a1c5d0cfd!2zVHVjdW3DoW4!5e0!3m2!1ses-419!2sar!4v1760487402719!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3727119.4588337303!2d-68.09719461822625!3d-24.179969682287474!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x941b0d2938ead0c7%3A0x8b4a1bd1f6c37998!2sSalta!5e0!3m2!1ses-419!2sar!4v1760487441767!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1877749.7527957128!2d-67.00158641317479!3d-23.189172046358813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9404a1f6e75c0087%3A0x815e91b230ce4e79!2sJujuy!5e0!3m2!1ses-419!2sar!4v1760487489614!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </aside>
+    </main>
+    <footer>
+        <p>Síguenos en nuestras redes sociales:</p>
+        <a href="https://facebook.com" target="_blank" rel="noopener"><img class="social-icon" src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook" /></a>
+        <a href="https://instagram.com" target="_blank" rel="noopener"><img class="social-icon" src="https://cdn-icons-png.flaticon.com/512/733/733558.png" alt="Instagram" /></a>
+        <a href="https://twitter.com" target="_blank" rel="noopener"><img class="social-icon" src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter" /></a>
+    </footer>
+
+    <div class="whatsapp-float">
+        <a href="https://wa.me/5491122526202" target="_blank" aria-label="Enviar WhatsApp">
+            <svg width="24" height="24" fill="#fff" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 0C5.37 0 0 5.37 0 12c0 2.11.62 4.08 1.69 5.74L0 24l6.49-1.66a11.94 11.94 0 005.51 1.42c6.63 0 12-5.37 12-12S18.63 0 12 0zm0 21.58c-1.8 0-3.47-.5-4.88-1.37l-.35-.22-3.87.99 1.04-3.77-.23-.37a8.507 8.507 0 01-1.3-4.69c0-4.71 3.79-8.5 8.5-8.5 4.71 0 8.5 3.79 8.5 8.5-.02 4.71-3.79 8.5-8.49 8.5zm4.29-6.91l-1.09-.5a1.15 1.15 0 00-1.08.1c-.34.22-1.31 1.23-1.61 1.48-.3.25-.54.28-.99.1s-1.89-.7-3.6-2.23a14.94 14.94 0 01-2.74-3.41c-.32-.53-.03-.82.23-1.06.24-.23.54-.58.81-.87.26-.29.35-.4.55-.67.17-.24.08-.42-.04-.67-.13-.25-1.05-2.49-1.44-3.4-.38-.9-.78-.78-1.08-.79-.28-.01-.6-.01-.91-.01a1.43 1.43 0 00-1.12.53c-.38.41-1.26 1.23-1.26 3 0 1.77 1.3 3.48 1.48 3.72.18.24 2.56 3.87 6.22 5.43.87.38 1.54.6 2.07.77.87.3 1.67.26 2.3.16.7-.11 2.15-.88 2.46-1.73.3-.85.3-1.58.21-1.73-.07-.15-.26-.25-.54-.43z"/>
+            </svg>
+        </a>
+    </div>
+</body>
 </html>
