--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Receta de Humita</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilos.css">
   </head>
   <div class="abajo">
@@ -13,7 +14,7 @@
       </div>
       <h1>Receta de humita en chala</h1>
       <div class="social-bar">
-    <a href="https://wa.me/123456789" target="_blank" title="WhatsApp">
+    <a href="https://wa.me/+5491122526202" target="_blank" title="WhatsApp">
       <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
     </a>
     <a href="https://www.facebook.com/tu_pagina" target="_blank" title="Facebook">
@@ -41,6 +42,28 @@
       <p>Y lo mejor es que va a ser mucho mas facil de hacer de lo que pensas!</p>
     </div>
     <br>
+    <div id="carouselExample" class="carousel slide">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="./img/lom.jpg" class="d-block w-50" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="./img/plo.jpg" class="d-block w-50" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="./img/jum.jpg" class="d-block w-50" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+  <br>
     <div class="ingredientes">
       <h3 class="ing">Ingredientes que necesitamos:</h3>
       <ul>
@@ -91,7 +114,7 @@
    class="whatsapp-float" target="_blank" title="WhatsApp">
   <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" style="width:40px; height:40px;">
 </a>
-  </body>
+
   <footer>
     <div class="barrio">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3287.296245979788!2d-58.72347507488933!3d-34.52072170311872!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbd4eb75ed529%3A0xb755899e10e6a6a3!2sRosa%20M%C3%ADstica%2C%20B1663%20San%20Miguel%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1763166904332!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -115,4 +138,6 @@
       <p>Nahiara Bernhardt</p>
      </div>
    </footer>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+     </body>
 </html>
