--- a/index.html
+++ b/index.html
@@ -114,7 +114,52 @@
    class="whatsapp-float" target="_blank" title="WhatsApp">
   <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" style="width:40px; height:40px;">
 </a>
-
+<h3>Otras recetas similares de la región</h3>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-6 col-lg-3">
+      <div class="card">
+  <img src="./img/empanada.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Empanadas salteñas</h5>
+    <p class="card-text">Las empanadas salteñas son un bocado irresistible del norte argentino: masa suave, relleno jugoso de carne cortada a cuchillo, cebolla y especias, con un toque de papa y pimentón que las vuelve inolvidables.
+</p>
+    <a href="https://www.paulinacocina.net/receta-empanadas-saltenas/25274" target="_blank" class="btn btn-primary">Ir a la receta</a>
+  </div>
+  </div>
+  </div>
+  <div class="col-sm-12 col-md-6 col-lg-3">
+  <div class="card">
+<img src="./img/rosca.jpg" class="card-img-top" alt="...">
+<div class="card-body">
+<h5 class="card-title">Rosquete</h5>
+<p class="card-text">El rosquete es un clásico dulce norteño: masa esponjosa en forma de aro, glaseado suave y aroma a limón, ideal para acompañar con mate o café.</p>
+<a href="https://cookpad.com/ar/recetas/1042522" target="_blank" class="btn btn-primary">Ir a la receta</a>
+</div>
+  </div>
+    </div>
+    <div class="col-sm-12 col-md-6 col-lg-3">
+    <div class="card">
+  <img src="./img/locro.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+  <h5 class="card-title">Locro</h5>
+  <p class="card-text">El locro es un guiso emblemático argentino: maíz blanco, zapallo y porotos que abrazan sabores profundos de carne, chorizo y panceta. Denso, aromático y reconfortante, es el plato perfecto para celebrar y compartir.</p>
+  <a href="https://www.paulinacocina.net/receta-de-locro-argentino/9829#google_vignette" target="_blank" class="btn btn-primary">Ir a la receta</a>
+  </div>
+    </div>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-3">
+      <div class="card">
+    <img src="./img/tamal.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+    <h5 class="card-title">Tamales</h5>
+    <p class="card-text">Los tamales son un clásico del norte argentino: masa de maíz suave que envuelve un relleno sabroso de carne y especias, todo cocido al vapor dentro de hojas de choclo. Aromáticos, tiernos y llenos de tradición.</p>
+    <a href="https://www.clarin.com/recetas/platos-principales/tamales-blanca-cotta_7_JwA3iaaFs.html" target="_blank" class="btn btn-primary">Ir a la receta</a>
+    </div>
+      </div>
+        </div>
+  </div>
+</div>
   <footer>
     <div class="barrio">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3287.296245979788!2d-58.72347507488933!3d-34.52072170311872!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbd4eb75ed529%3A0xb755899e10e6a6a3!2sRosa%20M%C3%ADstica%2C%20B1663%20San%20Miguel%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1763166904332!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
